# week1

week10/: CMakeLists.txt
week10/include/: Stack.hpp
week10/src/: Stack.cpp  main.cpp
week10/tests/: test_stack.cpp
week11/task1/: CMakeLists.txt
week11/task1/include/: trapezium.hpp
week11/task1/src/: main.cpp  trapezium.cpp
week11/task2/: CMakeLists.txt
week11/task2/include/: entropy.hpp
week11/task2/src/: entropy.cpp  main.cpp
week15/: run.sh
week15/client1/: CMakeLists.txt
week15/client1/include/: client.hpp
week15/client1/src/: client.cpp  main.cpp
week15/client2/: CMakeLists.txt
week15/client2/include/: client.hpp
week15/client2/src/: client.cpp  main.cpp
week15/server/: CMakeLists.txt
week15/server/include/: server.hpp
week15/server/src/: main.cpp  server.cpp
week3/task1/task1.1/: Makefile
week3/task1/task1.1/include/: age.hpp
week3/task1/task1.1/src/: age.cpp  main.cpp
week3/task1/task1.2/: Makefile
week3/task1/task1.2/include/: dayscalculator.hpp
week3/task1/task1.2/src/: dayscalculator.cpp  main.cpp
week3/task1/task1.3/: Makefile
week3/task1/task1.3/include/: badminton.hpp
week3/task1/task1.3/src/: badminton.cpp  main.cpp
week3/task2/task2.3/: Makefile
week3/task2/task2.3/include/: eratosthenes.hpp
week3/task2/task2.3/src/: eratosthenes.cpp  main.cpp
week3/task3/task3.1/: Makefile
week3/task3/task3.1/include/: array.hpp
week3/task3/task3.1/src/: array.cpp  main.cpp
week3/task3/task3.2/: Makefile
week3/task3/task3.2/include/: sort.hpp  (+1 more)
week3/task3/task3.3/: Makefile
week6/task3/C/: Makefile
(+15 files in other folders)
